ci: proper workflow

--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -1,32 +1,20 @@
-# This is a basic workflow to help you get started with Actions
-
 name: config
-
-# Controls when the action will run. Triggers the workflow on push or pull request
-# events but only for the master branch
 on:
   push:
-    branches: [ master ]
-    paths: [ config.json ]
+    branches:
+      - master
+    paths:
+      - 'config.json'
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  deploy:
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
-      
-    # Runs a set of commands using the runners shell
-    - name: Run a multi-line script
-      uses: actions/github-script@v1
+    - uses: actions/github-script@v2
       with:
         github-token: ${{ secrets.PERSONAL_GITHUB_TOKEN }}
-      run: |
-        const fs = require('fs').promises
-        const config = JSON.parse(await fs.readFile('./config.json'))
-        await github.users.updateAuthenticated(config.user)
+        script: |
+          const fs = require('fs').promises
+          const config = JSON.parse(await fs.readFile('./config.json'))
+          await github.users.updateAuthenticated(config.user)
