chore: force workflow run

--- a/config.json
+++ b/config.json
@@ -2,7 +2,7 @@
   "user": {
     "name": "TED Vortex (Teodor-Eugen Duțulescu)",
     "email": "rodoeted@yahoo.com",
-    "blog": "https://vortex.name",
+    "blog": "https://vortex.name/",
     "company": "@0_vortex",
     "location": "Bucharest, RO",
     "hireable": false,
