fix: company name adjusted

--- a/config.json
+++ b/config.json
@@ -2,8 +2,8 @@
   "user": {
     "name": "TED Vortex (Teodor-Eugen Duțulescu)",
     "email": "rodoeted@yahoo.com",
-    "blog": "https://vortex.name/",
-    "company": "@0_vortex",
+    "blog": "https://vortex.name",
+    "company": "@Tiamat-Tech",
     "location": "Bucharest, RO",
     "hireable": false,
     "bio": "Boiler Room Polymath"
