fix: proper email and quote badge

--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
   "user": {
     "name": "TED Vortex (Teodor-Eugen Duțulescu)",
-    "email": "tiamatu@tiamat.tech",
+    "email": "ted.vortex@gmail.com",
     "blog": "https://vortex.name",
     "company": "@Tiamat-Tech",
     "location": "Romania",
