ci: better commit messages for existing actions

--- a/.github/workflows/quote.yml
+++ b/.github/workflows/quote.yml
@@ -11,3 +11,5 @@ jobs:
 
     steps:
       - uses: siddharth2016/quote-readme@main
+        with:
+          COMMIT_MESSAGE: "chore: update quote of the day"
