--- a/config.json
+++ b/config.json
@@ -6,6 +6,6 @@
     "company": "@Tiamat-Tech",
     "location": "Romania",
     "hireable": true,
-    "bio": "SSS - Sustainable Software Solutionist"
+    "bio": "Ideaesthesic Software Engineer\n"
   }
 }
