--- a/.github/workflows/activity.yml
+++ b/.github/workflows/activity.yml
@@ -14,3 +14,5 @@ jobs:
       - uses: jamesgeorge007/github-activity-readme@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          COMMIT_MSG: "chore: update recent github activity"
