--- a/.github/workflows/waka.yml
+++ b/.github/workflows/waka.yml
@@ -3,7 +3,7 @@ name: wakatime stats
 on:
   workflow_dispatch:
   schedule:
-    - cron: "13 */2 * * *"
+    - cron: "13 */6 * * *"
 
 jobs:
   build:
@@ -14,7 +14,10 @@ jobs:
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          SHOW_LINES_OF_CODE: "True"
+          SHOW_LINES_OF_CODE: "False"
           SHOW_DAYS_OF_WEEK: "False"
           SHOW_LANGUAGE_PER_REPO: "False"
           SHOW_LOC_CHART: "False"
+          SHOW_TIMEZONE: "False"
+          SHOW_EDITORS: "False"
+          SHOW_OS: "False"
