feat: cleaned up wakatime script

--- a/.github/workflows/waka.yml
+++ b/.github/workflows/waka.yml
@@ -19,10 +19,10 @@ jobs:
           SHOW_COMMIT: "True"
           SHOW_DAYS_OF_WEEK: "True"
           SHOW_LANGUAGE: "True"
-          SHOW_OS: "True"
+          SHOW_OS: "False"
           SHOW_PROJECTS: "True"
-          SHOW_TIMEZONE: "True"
+          SHOW_TIMEZONE: "False"
           SHOW_EDITORS: "True"
-          SHOW_LANGUAGE_PER_REPO: "True"
+          SHOW_LANGUAGE_PER_REPO: "False"
           SHOW_SHORT_INFO: "True"
           SHOW_LOC_CHART: "False"
