fix: correct github token for lowlighter metrics

--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
       - uses: lowlighter/metrics@v3.16
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.GH_TOKEN }}
           filename: static/github-metrics.*
 
           # Options
