feat: re-integrate wakatime

--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -44,4 +44,12 @@ jobs:
           plugin_people_thanks: bdougie, mtfoley
           plugin_people_types: followers, following
 
+          plugin_wakatime: yes
+          plugin_wakatime_token: ${{ secrets.WAKATIME_API_KEY }}
+          plugin_wakatime_days: 7
+          plugin_wakatime_sections: time, projects, projects-graphs, languages, languages-graphs, editors, editors-graphs
+          plugin_wakatime_limit: 4
+          plugin_wakatime_url: https://wakatime.com
+          plugin_wakatime_user: vortex
+
 
