style: correct columnn sizing

--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -25,7 +25,7 @@ jobs:
           template: classic
           base: header, activity, community, repositories, metadata
           config_timezone: Africa/Harare
-          config_display: large
+          config_display: columns
 
           # Achievements
           plugin_achievements: yes
